[package]
name = "float"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["float", "number", "trait"]
description = "float number trait"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-float.git"
homepage = "https://github.com/nathanfaucett/rs-float"

[dependencies]
approx_eq = {git = "https://github.com/nathanfaucett/rs-approx_eq.git"}
signed = {git = "https://github.com/nathanfaucett/rs-signed.git"}
